--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/templates/exampleRedirect.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/templates/exampleRedirect.html
@@ -13,15 +13,17 @@
         </div>
         <!-- 按钮 查询 导入 -->
         <div class="querySuite-button">
-            <button class="btn btn-default" action="query">
-                <span class="glyphicon glyphicon-search"></span> 查询
-            </button>
-            <button class="btn btn-default" action="add" id="Add">
-                <span class="glyphicon glyphicon-plus-sign"></span> 添加
-            </button>
-            <button class="btn btn-danger" action="delete">
-                <span class="glyphicon glyphicon-trash"></span> 删除
-            </button>
+            <div class="btn-group">
+                <button type="button" class="btn btn-default" action="query">
+                    <i class="fas fa-search"></i> 查询
+                </button>
+                <button type="button" class="btn btn-default" action="add" id="add">
+                    <i class="fas fa-plus"></i> 添加
+                </button>
+                <button type="button" class="btn btn-default" action="delete">
+                    <i class="fas fa-trash-alt"></i> 删除
+                </button>
+            </div>
         </div>
         <!-- 列表-->
         <div class="querySuite-table" data-order-by="exampleName" data-order-type="asc"
@@ -61,7 +63,7 @@
             })
             .query();
 
-        $("#Add").click(function () {
+        $("#add").click(function () {
             goPage("/Templates/ExampleRedirectEdit", { exampleId: '' }, "ExampleRedirect");
         });
     });
