--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/templates/exampleRedirectEdit.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/templates/exampleRedirectEdit.html
@@ -137,10 +137,10 @@
         </div>
         <div class="modal-footer">
             <button class="btn btn-primary notHide" action="save">
-                <span class="glyphicon glyphicon-saved"></span> 保存
+                <i class="fas fa-vote-yea"></i> 保存
             </button>
             <button class="btn btn-default notHide" id="close">
-                <span class="glyphicon glyphicon-remove"></span>关闭
+                <i class="fas fa-times"></i> 关闭
             </button>
         </div>
     </div>
