--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/work/templates/exampletow.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/work/templates/exampletow.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>微信公众号示例页面</title>
+    <title>微信企业号示例页面</title>
     <meta name="description" content="BitAdminCore, Version 1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <div class="row">
-            微信公众号示例页面（二）<br />
+            微信企业号示例页面（二）<br />
             姓名：<span class="userName"></span><br />
             手机：<span class="mobile"></span>
         </div>
