--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/lib/ueditor/dialogs/template/template.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/lib/ueditor/dialogs/template/template.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
 <head>
     <title></title>
@@ -10,7 +10,7 @@
     <div class="wrap">
         <div class="left">
             <div class="top">
-                <label><var id="lang_template_clear"></var>：<input id="issave" type="checkbox"></label>
+                <label><var id="lang_template_clear"></var>锛?input id="issave" type="checkbox"></label>
             </div>
             <div class="bottom border_style1" id="preview"></div>
         </div>
